# oauth2-in-rust-and-react

./: .gitignore
backend/: Cargo.toml
backend/src/: main.rs
backend/src/errors/: db_error.rs  mod.rs  user_result.rs
backend/src/handlers/: mod.rs  user_handel.rs
backend/src/libs/: db.rs
backend/src/models/: user_model.rs
backend/src/routers/: all_routers.rs  mod.rs  user_router.rs
frotend/: package.json
frotend/src/: App.tsx
frotend/src/components/auth/: login-form.tsx  loginProvides.tsx
frotend/src/components/page/: profile.tsx  register.tsx
