[package]
name = "oauth-2"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oauth2 = "4.4.2"
axum = "0.7.7"
axum-extra = "0.9.4"
mongodb = "3.1.0"
bcrypt = "0.15.1"
jsonwebtoken = "8.0"
thiserror = "1.0"
tower = "0.4"
chrono = "0.4.38"